# FoodStore_SDD_Canciani

./: .gitignore  README.md  opencode.jsonc  pyproject.toml  run_seeds.bat  seed_database.py  start_backend.bat  start_backend.ps1  test_backend.py
.agents/: SKILLS.md
.engram/: manifest.json
backend/: README.md  __init__.py  alembic.ini  app.py  config.py  create_db.py  database.py  dependencies.py  fix_models.py  main.py  requirements.txt  run_seeds.py  seed_config.py  seed_simple.py  test_mysql.py
backend/core/: __init__.py  exceptions.py  middleware.py  security.py
backend/features/: __init__.py  base.py
backend/features/addresses/: __init__.py  models.py  service.py
backend/features/admin/: service.py
backend/features/auth/: __init__.py  dependencies.py  models.py  requires.py  router.py  test_router.py
backend/features/categories/: __init__.py  models.py
backend/features/ingredients/: __init__.py  models.py
backend/features/orders/: __init__.py  models.py  router.py
backend/features/payments/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/features/products/: __init__.py  models.py  router.py  schemas.py  service.py
backend/features/repositories/: __init__.py  base_repository.py  categoria_repository.py  direccion_repository.py  forma_pago_repository.py  (+7 more)
backend/migrations/: env.py
backend/seeds/: __init__.py
docs/: CHANGES.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: index.css
(+95 files in other folders)
